--- a/src/main/res/layout/yzmlogin.xml
+++ b/src/main/res/layout/yzmlogin.xml
@@ -24,7 +24,7 @@
         android:layout_alignBottom="@+id/toolbar"
         android:layout_centerHorizontal="true"
         android:background="#66ccff"
-        android:text="@string/we"
+        android:text="@string/yzm"
         android:textSize="30sp"
         android:textStyle="bold" />
     <ImageView
@@ -60,9 +60,9 @@
         android:id="@+id/password_label"
         style="@style/wm_hw"
         android:layout_below="@id/phone"
-        android:layout_marginStart="60dp"
+        android:layout_marginStart="35dp"
         android:layout_marginTop="-2dp"
-        android:text="@string/password"
+        android:text="@string/yz"
         android:textColor="#000"
         android:textSize="25sp" />
 
@@ -71,7 +71,7 @@
         android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:layout_below="@id/phone"
-        android:hint="@string/password_label"
+        android:hint="@string/yz1"
         android:layout_marginStart="120dp"
         android:inputType="textPassword"
         android:minHeight="48dp"
@@ -101,14 +101,6 @@
         android:text="@string/register"
         android:textSize="25sp" />
 
-    <TextView
-        android:id="@+id/tv_sms_login"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignEnd="@+id/register"
-        android:layout_below="@+id/register"
-        android:layout_marginTop="15dp"
-        android:text="@string/yzm"
-        android:textSize="16sp" />
+
 
 </RelativeLayout>
