--- a/src/main/res/values/style.xml
+++ b/src/main/res/values/style.xml
@@ -4,4 +4,8 @@
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
     </style>
+    <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
+
+    </style>
+
 </resources>
