--- a/src/main/res/layout/activity_user_info.xml
+++ b/src/main/res/layout/activity_user_info.xml
@@ -3,6 +3,46 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:background="#66ccff">
+        <ImageView
+            android:id="@+id/iv_back"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:src="@drawable/ic_arrow_back"
+            android:contentDescription="@string/todo" />
+        <TextView
+            android:id="@+id/tv_title"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:background="#66ccff"
+            android:text="@string/gr"
+            android:textSize="30sp"
+            android:textStyle="bold" />
+
+    </androidx.appcompat.widget.Toolbar>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true">
+        <View
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_weight="1" />
+        <ImageView
+            android:id="@+id/esclogin"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:src="@drawable/esclogin"
+            android:layout_margin="16dp"/>
+
+    </LinearLayout>
     <TextView
         android:id="@+id/tv_name"
         android:layout_width="wrap_content"
@@ -30,6 +70,10 @@
 
     <TextView
         android:id="@+id/tv_id"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+    <TextView
+        android:id="@+id/tv_date"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 
