--- a/src/main/res/values/colors.xml
+++ b/src/main/res/values/colors.xml
@@ -5,6 +5,7 @@
     <color name="blue">#0000FF</color>
     <color name="red">#FF0000</color>
     <color name="green">#00FF00</color>
+    <color name="custom_lighter_gray">#DDDDDD</color>
     <color name="yellow">#FFFF00</color>
     <color name="orange">#FFA500</color>
     <color name="purple">#800080</color>
